--- a/index.html
+++ b/index.html
@@ -342,6 +342,12 @@
                         </div>
                     </div>
 
+                    <div class="posts_container">
+                        <div class="post_wrapper publication1"> <!--Elemento para publicar-->
+                            <p>Contenido aquí</p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
