Construyendo publicasiones, savepoint

--- a/index.html
+++ b/index.html
@@ -343,8 +343,42 @@
                     </div>
 
                     <div class="posts_container">
-                        <div class="post_wrapper publication1"> <!--Elemento para publicar-->
-                            <p>Contenido aquí</p>
+                        <div class="post_wrapper publication_1"> <!--Elemento para publicar-->
+                            <div class="post_user-container">
+                                <figure class="post_user-picture">
+                                    <img src="./resources/profile.jpg" alt="usrPic"> 
+                                </figure>
+                                <div class="post_user-details">
+                                    <div class="post_user_name-details">
+                                        <h4 class="post_user-name">Benjamín Martinez</h4>
+                                        <img src="./resources/triangle-grey.png" alt="" class="arrow-right">
+                                        <h4 class="post_user-name">React Group</h4>
+                                    </div>
+
+                                    <div class="post_time-details">
+                                        <p> <small>3h</small>  </p>
+                                        <img class="group_post-logo" src="./resources/groups.png" alt="">
+                                    </div>
+
+                                </div>
+                            </div>
+
+
+                            <div class="post_text-container">
+                                <p class="post_text-content">¿Qué servicio de hosting me recomiendan?</p> <!--Contenido txt del post-->                                
+                            </div>
+
+                            <div class="likes_and_comments">
+                                <div class="likes_post_container">
+                                    <img class="likes_post-icon" src="./resources/like.png" alt="">
+                                    <p>7</p>
+                                </div>
+
+                                <div class="post_comments-container">
+                                    <p>10 comentarios</p>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
@@ -600,6 +634,8 @@
         </div>
     </section>
     
+    
+
     <footer></footer>
 
     <script src="./scripts/stories.js"></script>
