--- a/index.html
+++ b/index.html
@@ -379,6 +379,25 @@
                                 </div>
                             </div>
 
+                            <div class="like_and_comment-btn">
+                                <div class="i_like_it">
+                                    <button class="like_post_btn"> <img src="./resources/like_post.png" alt=""> Me gusta</button>
+                                </div>
+                                <div class="i_comment">
+                                    <button class="comment_post_btn"> <img src="./resources/comment_post.png" alt=""> Comentar</button>
+                                </div>
+                            </div>
+
+                            <div class="write_a_comment_container">
+                                <figure class="comment_profile_image">
+                                    <img src="./resources/profile.jpg" alt="">
+                                    <div class="active_user_symbol"></div>
+                                </figure>
+
+                                <input class="post_a_comment" type="text" placeholder="Escribe un comentario">
+                            </div>
+                            
+
                         </div>
                     </div>
 
